--- a/src/pages/why-alignment/why-alignment-is-difficult.mdx
+++ b/src/pages/why-alignment/why-alignment-is-difficult.mdx
@@ -17,7 +17,7 @@ In the previous page, we defined AI alignment as the problem of ensuring that a 
 
 _Wait, why is that difficult?_
 
-<Toggle title={<div class="font-bold">Because it’s difficult to choose good goals.</div>}>
+<Toggle title={<span class="font-bold">Because it’s difficult to choose good goals.</span>}>
     1. Picking objectives is surprisingly hard.
     2. The strategy that maximizes the objectives is **probably not what you aim for** ([list of examples](https://arc.net/l/quote/eftxikyd) in gaming agents).
         - E.g., an [OpenAI agent](https://openai.com/index/faulty-reward-functions/) trained in a boat racing game maximizes its score by repeatedly drifting around in the same circle (crashing into other boats, catching on fire, and going the wrong way).
