--- a/src/pages/introduction.mdx
+++ b/src/pages/introduction.mdx
@@ -1,5 +1,6 @@
 import Values from '../components/intro/Values';
 import FalseCard from '../components/intro/FalseCard';
+import CTA from '../components/intro/CTA';
 
 # Introduction
 
@@ -24,14 +25,6 @@ import FalseCard from '../components/intro/FalseCard';
     </FalseCard>
 </div>
 
-
-
-## What is this guide?
-
-Most resources and knowledge about alignment are currently scattered (and it’s hard to know what’s important).
-
-This guide is a <b>curated central hub of information and resources for alignment.</b> Crucially, we view alignment as as technical problem, and as such, we provide technical resources. We keep every page short for you, with options to dig deeper.
-
 ## What's this all about?
 
 Misaligned AI ≠ Terminator movies. Superintelligence doesn't need to be 'evil' to pose a threat. By default, all intelligent agents—including
@@ -40,3 +33,5 @@ humans—aim to preserve themselves, acquire resources, and improve themselves. 
 Think of when the atomic bomb was first being created: before we ever needed to worry about misuse, there was the very real possibility that we could accidentally set the world on fire.
 
 We’re on the path to build something much harder to contain than nuclear weapons: superintelligent AI. Alignment is making sure we don’t <b>accidentally</b> end the world.
+
+<CTA />
