--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -5,7 +5,7 @@ import LinkBadge from '@/components/elements/LinkBadge';
 
 # Quickstart: How to use this guide
 
-<Promise>This page outlines the high-level contents of this guide and how we recommend you navigate it.</Promise>
+<Promise>This page explains what this guide is (including it's high-level contents) + how we recommend you navigate it.</Promise>
 
 ## Table of Contents
 
@@ -37,6 +37,14 @@ import LinkBadge from '@/components/elements/LinkBadge';
         </ul>
     </SectionCard>
 </div>
+
+
+## What is this guide?
+
+Most resources and knowledge about alignment are currently scattered (and it’s hard to know what’s important).
+
+This guide is a <b>curated central hub of information and resources for alignment.</b> Crucially, we view alignment as as technical problem, and as such, we provide technical resources. We keep every page short for you, with options to dig deeper.
+
 
 ## Using this guide
 
