--- a/src/pages/why-alignment/default-dangerous.mdx
+++ b/src/pages/why-alignment/default-dangerous.mdx
@@ -87,6 +87,8 @@ Hence, it is not enough to align an AI system's final goals alone; we must also 
 
 <Toggle title='Sources and resources' className='px-4 bg-accent-400 rounded-xl mt-10'>
     1. Robert Miles provides great introductions to instrumental convergence in [Why Would AI Want to do Bad Things?](https://www.youtube.com/watch?v=ZeecOKBus3Q) and the orthongality thesis in [Intelligence and
-    Stupidity](https://www.youtube.com/watch?v=hEUO6pjwFOo&lc=UgzWZ_bUKbKohc0gK3V4AaABAg). 2. For a comprehensive and in-depth understanding of these two concepts, see Arbital's docs on [instrumental
+    Stupidity](https://www.youtube.com/watch?v=hEUO6pjwFOo&lc=UgzWZ_bUKbKohc0gK3V4AaABAg). 
+    
+    2. For a comprehensive and in-depth understanding of these two concepts, see Arbital's docs on [instrumental
     convergence](https://arbital.com/p/instrumental_convergence/) and [orthogonality](https://arbital.com/p/orthogonality/).
 </Toggle>
