--- a/src/pages/next-steps.mdx
+++ b/src/pages/next-steps.mdx
@@ -1,5 +1,6 @@
 import Promise from '@/components/elements/Promise';
 import Toggle from '@/components/elements/Toggle';
+import LinkBadge from '@/components/elements/LinkBadge';
 
 # Next steps
 <Promise>
@@ -12,7 +13,7 @@ Here, we give a few different ways to begin onboarding to work on alignment.
 
 ## Current research directions and future work
 
-One high-value thing to do would be to take one of the ideas listed in a future work section on our research directions page and start working on it. Many of the current methods in alignment research are still in their infancy, and there is a lot of low-hanging fruit to pick that will improve current methods and suggest which methods are worth working on. On that page, we’ve also linked relevant literature and sources that can be used to help you with the problem.
+One high-value thing to do would be to take one of the ideas listed in a "future work" section on <LinkBadge href="/research-directions">Research Directions</LinkBadge> and start working on it. Many of the current methods in alignment research are still in their infancy, and there is a lot of low-hanging fruit to pick that will improve current methods and suggest which methods are worth working on. On that page, we’ve also linked relevant literature and sources that can be used to help you with the problem.
 
 In particular, we view W2SG as a worthwhile path to pursue, and we highly recommend investigating ways to contribute to this research direction.
 
@@ -26,11 +27,11 @@ If you have specific thoughts here, writing up your ideas clearly and getting fe
 
 There is currently no clear measure of " success“ or even “progress” for AI alignment; it is incredibly difficult to understand how much meaningful progress we are making. 
 
-A good proposal for such a metric that covers the engineering, ethical, and/or governmental difficulties of super alignment could be very useful in 
+A good proposal for such a metric that covers the engineering, ethical, and/or governmental difficulties of super alignment could be very useful in:
 
-1) ensuring we work on what’s important 
+1) Ensuring we work on what’s important, and
 
-2) increasing the field's motivation and tractability.
+2) Increasing the field's motivation and tractability.
 
 For example, a high-quality “[MMLU](https://arxiv.org/abs/2009.03300) for Alignment” would greatly contribute to alignment research.
 
