--- a/src/pages/contact-us.mdx
+++ b/src/pages/contact-us.mdx
@@ -13,3 +13,5 @@ We wanted a <b>curated central hub of information and resources</b> for alignmen
 With this in mind, we co-created this website. We're always open to feedback and contributions.
 
 <Contact />
+
+Thank you to [Tina Mai](https://tinamai.xyz) for designing this website.
