--- a/src/pages/introduction.mdx
+++ b/src/pages/introduction.mdx
@@ -11,7 +11,7 @@ import CTA from '../components/intro/CTA';
 
 ## To be clear, we are not:
 
-<div className='space-y-7'>
+<div className='space-y-5 -mt-2'>
     <FalseCard title='We do NOT advocate for slowing or pausing AI capabilities research.'>
         The best alignment methods have stemmed from advancements in AI capabilities—a trend we expect to continue. Moreover, pausing AI at this stage is completely unrealistic and undesirable due to overwhelming economic and
         technological incentives.
