cool lil graphic! in introduction

--- a/src/pages/introduction.mdx
+++ b/src/pages/introduction.mdx
@@ -4,10 +4,11 @@ import CTA from '../components/intro/CTA';
 
 # Introduction
 
+![Circles Graphic](../assets/circles.png)
+
 ## Here's what we believe:
 
 <Values />
-
 
 ## To be clear, we are not:
 
