colors & sources padding

--- a/src/pages/why-alignment/default-dangerous.mdx
+++ b/src/pages/why-alignment/default-dangerous.mdx
@@ -14,7 +14,7 @@ But how is this different than machines we’ve already built that are better th
 ## Consequences
 
 <p>
-    <span className='font-bold'>Why should a superintelligent AI concern you any more than the fact that mechanical vehicles can go faster than a human can run?</span>
+	<span className='font-bold'>Why should a superintelligent AI concern you any more than the fact that mechanical vehicles can go faster than a human can run?</span>
 </p>
 
 The fundamental difference between superintelligent AI and mechanical vehicles is the **generality** of their capabilities.
@@ -28,24 +28,25 @@ _Okay, even if that’s true, how would a chatbot take over the world?_
 ## Abilities
 
 <p>
-    <span className='font-bold'>How could a computer program gain or wield power?</span>
+	<span className='font-bold'>How could a computer program gain or wield power?</span>
 </p>
 
 <Toggle
-    title={
-        <div>
-            <p>A computer program doesn't actually serve as a constraint for any generally intelligent agent.</p>
-            <p className='mt-3'>
-                Through the digital world alone, even humans (not to mention a a superintelligent AI) can strategically manipulate people, hack into technology, engineer new devices, and amass financial resources to achieve its
-                goals.
-            </p>
-        </div>
-    }
+	title={
+		<div>
+			<p>A computer program doesn't actually serve as a constraint for any generally intelligent agent.</p>
+			<p className='mt-3'>
+				Through the digital world alone, even humans (not to mention a a superintelligent AI) can strategically manipulate people, hack into technology, engineer new devices, and amass financial
+				resources to achieve its goals.
+			</p>
+		</div>
+	}
 >
-    To illustrate, here is one way this could happen (although there are many others): 1. Humans develop an AI system that becomes more intelligent over time, mainly with human intervention responsible for capability improvements.
-    2. After sufficient improvement, the AI system eventually understands the world well enough that it can improve its own design. 3. The AI system covertly develops long-term goals and realizes it does not need to act truthfully
-    around humans. 4. The AI system gains access to the physical world, either by gaining access to the Internet, hacking into robots, or blackmailing humans to carry out actions on its behalf. 5. The AI system finally implements
-    its long-term plan, optimizing its current objectives, which may differ from its original human-specified objectives.
+	To illustrate, here is one way this could happen (although there are many others): 1. Humans develop an AI system that becomes more intelligent over time, mainly with human intervention responsible
+	for capability improvements. 2. After sufficient improvement, the AI system eventually understands the world well enough that it can improve its own design. 3. The AI system covertly develops
+	long-term goals and realizes it does not need to act truthfully around humans. 4. The AI system gains access to the physical world, either by gaining access to the Internet, hacking into robots, or
+	blackmailing humans to carry out actions on its behalf. 5. The AI system finally implements its long-term plan, optimizing its current objectives, which may differ from its original human-specified
+	objectives.
 </Toggle>
 
 _But why should we expect it to use its power to the detriment of humankind?_
@@ -53,42 +54,40 @@ _But why should we expect it to use its power to the detriment of humankind?_
 ## Destructiveness
 
 <p>
-    <span className='font-bold'>Wouldn’t a superintelligent AI be smart enough to use its power responsibly?</span>
+	<span className='font-bold'>Wouldn’t a superintelligent AI be smart enough to use its power responsibly?</span>
 </p>
 
 In short, **no**. An AI system will use its power in a way to maximize its goals _regardless of the nature of its goals_ (and as we’ve seen, it is difficult to choose good goals). <b className="font-bold">A superintelligent AI would simply be better at doing so.</b>
 
 <Toggle
-    title={
-        <div>
-            More generally, the <b>orthogonality thesis</b> asserts that <i>any</i> level of intelligence can be combined with <i>any</i> final goal.
-        </div>
-    }
+	title={
+		<div>
+			More generally, the <b>orthogonality thesis</b> asserts that <i>any</i> level of intelligence can be combined with <i>any</i> final goal.
+		</div>
+	}
 >
-    - Classic example: paperclip maximization. - Let's say aliens came to Earth and offered us 1 million dollars every time we made a paperclip. - Despite the fact our intelligence is far more than the minimum intelligence
-    necessary to make paperclips, almost everyone on Earth would immediately start making paperclips.
+	- Classic example: paperclip maximization. - Let's say aliens came to Earth and offered us 1 million dollars every time we made a paperclip. - Despite the fact our intelligence is far more than the
+	minimum intelligence necessary to make paperclips, almost everyone on Earth would immediately start making paperclips.
 </Toggle>
 This means that even if the AI system were many times more intelligent than humans, this would guarantee absolutely nothing about its final goals.
 
 Moreover, even if the AI system’s final goals seem safe, it is likely that it will share a lot of _intermediate_ goals in common with a misaligned superintelligence.
 
 <Toggle
-    title={
-        <div>
-            These goals are known as <b>convergent instrumental goals</b>, i.e. intermediate goals or strategies that are useful in pursuing (almost) any final goal.
-        </div>
-    }
+	title={
+		<div>
+			These goals are known as <b>convergent instrumental goals</b>, i.e. intermediate goals or strategies that are useful in pursuing (almost) any final goal.
+		</div>
+	}
 >
-    - For example, even if an AI agent’s final goal has nothing to do with self-preservation, self-preservation is likely necessary for achieving its final goal, and hence almost any agent will assume self-preservation as one of
-    its intermediate goals. - Other convergent instrumental goals include goal-content integrity, cognitive enhancement, and resource acquisition (cite Bostrom).
+	- For example, even if an AI agent’s final goal has nothing to do with self-preservation, self-preservation is likely necessary for achieving its final goal, and hence almost any agent will assume
+	self-preservation as one of its intermediate goals. - Other convergent instrumental goals include goal-content integrity, cognitive enhancement, and resource acquisition (cite Bostrom).
 </Toggle>
 
 Hence, it is not enough to align an AI system's final goals alone; we must also align its intermediate goals, which by default will be identical to those of a misaligned system.
 
-<Toggle title='Sources and resources' className='px-4 bg-accent-400 rounded-xl mt-10'>
-    1. Robert Miles provides great introductions to instrumental convergence in [Why Would AI Want to do Bad Things?](https://www.youtube.com/watch?v=ZeecOKBus3Q) and the orthongality thesis in [Intelligence and
-    Stupidity](https://www.youtube.com/watch?v=hEUO6pjwFOo&lc=UgzWZ_bUKbKohc0gK3V4AaABAg). 
-    
-    2. For a comprehensive and in-depth understanding of these two concepts, see Arbital's docs on [instrumental
-    convergence](https://arbital.com/p/instrumental_convergence/) and [orthogonality](https://arbital.com/p/orthogonality/).
+<Toggle title='Sources and resources' className='px-4 py-2 bg-accent-400 rounded-xl mt-10'>
+	1. Robert Miles provides great introductions to instrumental convergence in [Why Would AI Want to do Bad Things?](https://www.youtube.com/watch?v=ZeecOKBus3Q) and the orthongality thesis in
+	[Intelligence and Stupidity](https://www.youtube.com/watch?v=hEUO6pjwFOo&lc=UgzWZ_bUKbKohc0gK3V4AaABAg). 2. For a comprehensive and in-depth understanding of these two concepts, see Arbital's docs
+	on [instrumental convergence](https://arbital.com/p/instrumental_convergence/) and [orthogonality](https://arbital.com/p/orthogonality/).
 </Toggle>
