--- a/src/pages/why-alignment/why-alignment-is-difficult.mdx
+++ b/src/pages/why-alignment/why-alignment-is-difficult.mdx
@@ -48,14 +48,14 @@ _Wait, why is that difficult?_
 </Toggle>
 
 <Toggle
-    title={
-        <div>
-            But that scenario is unrealistic in many ways. One important way is that you wouldn’t be able to <b className='font-bold'>“turn it off.”</b>
-        </div>
-    }
+	title={
+		<div>
+			But that scenario is unrealistic in many ways. One important way is that you wouldn’t be able to <b className='font-bold'>“turn it off.”</b>
+		</div>
+	}
 >
-    - Turning it off will prevent it from achieving its objective. - It will fight you and, even worse, deceive you (e.g., behave until it’s in a position where you can’t turn it off, and then go after its actual objective of the
-    tea).
+	- Turning it off will prevent it from achieving its objective. - It will fight you and, even worse, deceive you (e.g., behave until it’s in a position where you can’t turn it off, and then go after
+	its actual objective of the tea).
 </Toggle>
 
 This is a **convergent instrumental goal** (it doesn’t matter what the end goal is), as are self-preservation, goal preservation, resource acquisition, and self-improvement. Thus, **Artificial General Intelligence is dangerous by default.** (More in <LinkBadge href="/why-alignment/default-dangerous">Unaligned AI: default dangerous</LinkBadge>.)
@@ -78,8 +78,7 @@ Today’s language models can be considered the “babies.” The superintellige
 
 We also **may only get one shot** (<LinkBadge href="/why-alignment/why-this-is-urgent">Why this is urgent</LinkBadge>).
 
-<Toggle title='Sources and resources' className='px-4 bg-accent-400 rounded-xl mt-10'>
-    1. Leopold Aschenbrenner's essay on [Superalignment](https://situational-awareness.ai/superalignment/) dives deeper into the the unsolved technical problem of reliably controlling AI smarter than us. 
-    
-    2. The teacup example and general framing on this page comes from Robert Mile's [Intro to AI Safety](https://www.youtube.com/watch?v=pYXy-A4siMw).
+<Toggle title='Sources and resources' className='px-4 py-2 bg-accent-400 rounded-xl mt-10'>
+	1. Leopold Aschenbrenner's essay on [Superalignment](https://situational-awareness.ai/superalignment/) dives deeper into the the unsolved technical problem of reliably controlling AI smarter than
+	us. 2. The teacup example and general framing on this page comes from Robert Mile's [Intro to AI Safety](https://www.youtube.com/watch?v=pYXy-A4siMw).
 </Toggle>
