--- a/src/pages/why-alignment/why-this-is-urgent.mdx
+++ b/src/pages/why-alignment/why-this-is-urgent.mdx
@@ -73,7 +73,11 @@ import LinkBadge from '@/components/elements/LinkBadge';
    - AI alignment is _not impossible in principle_. For example, if we had a textbook from one hundred years in the future containing all the ideas that actually work, we could probably build an aligned superintelligence in six months. The real difficulty is more so that we only have one chance to get it right.
 
 <Toggle title='Sources and resources' className='px-4 py-2 bg-accent-400 rounded-xl mt-10'>
-	1. In [I. From GPT-4 to AGI](https://situational-awareness.ai/from-gpt-4-to-agi/), Leopold Aschenbrenner explains why **AGI by 2027 is strikingly plausible**: "GPT-2 to GPT-4 took us from
-	~preschooler to ~smart high-schooler abilities in 4 years ... we should expect another preschooler-to-high-schooler-sized qualitative jump by 2027." 2. In [II. From AGI to Superintelligence: the
-	Intelligence Explosion](https://situational-awareness.ai/from-agi-to-superintelligence/), Leopold explains why we will rapidly go from human-level to vastly superhuman AI systems.
+
+    1. In [I. From GPT-4 to AGI](https://situational-awareness.ai/from-gpt-4-to-agi/), Leopold Aschenbrenner explains why **AGI by 2027 is strikingly plausible**: "GPT-2 to GPT-4 took us from
+    ~preschooler to ~smart high-schooler abilities in 4 years ... we should expect another preschooler-to-high-schooler-sized qualitative jump by 2027."
+
+    2. In [II. From AGI to Superintelligence: the
+    Intelligence Explosion](https://situational-awareness.ai/from-agi-to-superintelligence/), Leopold explains why we will rapidly go from human-level to vastly superhuman AI systems.
+
 </Toggle>
