modularized sources is sooo much better

--- a/src/pages/why-alignment/default-dangerous.mdx
+++ b/src/pages/why-alignment/default-dangerous.mdx
@@ -1,5 +1,6 @@
 import Promise from '@/components/elements/Promise';
 import Toggle from '@/components/elements/Toggle';
+import Sources from '@/components/global/Sources';
 
 # Why Superintelligent AI is Dangerous by Default
 
@@ -86,7 +87,7 @@ Moreover, even if the AI system’s final goals seem safe, it is likely that it 
 
 Hence, it is not enough to align an AI system's final goals alone; we must also align its intermediate goals, which by default will be identical to those of a misaligned system.
 
-<Toggle title='Sources and resources' className='px-4 py-2 bg-accent-400 rounded-xl mt-10'>
+<Sources>
 
     1. Robert Miles provides great introductions to instrumental convergence in [Why Would AI Want to do Bad Things?](https://www.youtube.com/watch?v=ZeecOKBus3Q) and the orthongality thesis in
     [Intelligence and Stupidity](https://www.youtube.com/watch?v=hEUO6pjwFOo&lc=UgzWZ_bUKbKohc0gK3V4AaABAg).
@@ -94,4 +95,4 @@ Hence, it is not enough to align an AI system's final goals alone; we must also 
     2. For a comprehensive and in-depth understanding of these two concepts, see Arbital's docs
     on [instrumental convergence](https://arbital.com/p/instrumental_convergence/) and [orthogonality](https://arbital.com/p/orthogonality/).
 
-</Toggle>
+</Sources>
