--- a/src/pages/why-alignment/why-alignment-is-difficult.mdx
+++ b/src/pages/why-alignment/why-alignment-is-difficult.mdx
@@ -1,6 +1,7 @@
 import Promise from '@/components/elements/Promise';
 import Toggle from '@/components/elements/Toggle';
 import LinkBadge from '@/components/elements/LinkBadge';
+import Sources from '@/components/global/Sources';
 
 # Why is alignment difficult?
 
@@ -78,10 +79,10 @@ Today’s language models can be considered the “babies.” The superintellige
 
 We also **may only get one shot** (<LinkBadge href="/why-alignment/why-this-is-urgent">Why this is urgent</LinkBadge>).
 
-<Toggle title='Sources and resources' className='px-4 py-2 bg-accent-400 rounded-xl mt-10'>
+<Sources>
 
     1. Leopold Aschenbrenner's essay on [Superalignment](https://situational-awareness.ai/superalignment/) dives deeper into the the unsolved technical problem of reliably controlling AI smarter than us.
 
     2. The teacup example and general framing on this page comes from Robert Mile's [Intro to AI Safety](https://www.youtube.com/watch?v=pYXy-A4siMw).
 
-</Toggle>
+</Sources>
