--- a/src/pages/why-alignment/understanding-alignment.mdx
+++ b/src/pages/why-alignment/understanding-alignment.mdx
@@ -1,6 +1,7 @@
 import Promise from '@/components/elements/Promise';
 import RiskTable from '@/components/elements/RiskTable';
 import Toggle from '@/components/elements/Toggle';
+import Sources from '@/components/global/Sources';
 
 # Understanding AI Alignment
 
@@ -45,7 +46,7 @@ The alignment problem is commonly misunderstood as “aligning the AI’s values
 
 ---
 
-<Toggle title='Sources and resources' className='px-4 py-2 bg-accent-400 rounded-xl mt-10'>
+<Sources>
 	1. The definitions above come from our interpretations of Paul Christiano’s writing. If you wish to dig deeper into these definitions, he has very precise and thoughtful blog posts: 
         - [AI “safety” vs “control” vs “alignment”](https://ai-alignment.com/ai-safety-vs-control-vs-alignment-2a4b42a863cc) _(Nov 2016)_: his initial definition attempt (which he has since adapted)
 
@@ -53,4 +54,4 @@ The alignment problem is commonly misunderstood as “aligning the AI’s values
 
         - [AI alignment is distinct from its near-term applications](https://ai-alignment.com/ai-alignment-is-distinct-from-its-near-term-applications-81300500ad2e) _(Dec 2022)_: contains his best definition + an important comment on alignment misconceptions
 
-</Toggle>
+</Sources>
